Replace `get(0)` with `getFirst()` in GameService to enhance code readability and consistency